--- a/app/src/main/res/layout/activity_admin_screen.xml
+++ b/app/src/main/res/layout/activity_admin_screen.xml
@@ -4,32 +4,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:background="@color/cardview_dark_background"
+    android:padding="16dp"
+    android:textColor="@color/white"
+
+    >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Brand Filter:"
         android:textSize="20sp"
+        android:textColor="@color/white"
+        android:layout_margin="8dp"
         />
     <Spinner
         android:id="@+id/brandFilterSpinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:background="@color/material_dynamic_neutral70"
+        android:layout_margin="8dp"
+        />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Cable Filter:"
         android:textSize="20sp"
+        android:textColor="@color/white"
+        android:layout_margin="8dp"
         />
     <Spinner
         android:id="@+id/cabelFilterSpinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:background="@color/material_dynamic_neutral70"
+        android:layout_margin="8dp"
+        />
 
     <ListView
         android:id="@+id/loanListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:clickable="false"
+        android:clipChildren="false"
+        android:textColor="@color/white"
+        android:background="@color/material_dynamic_neutral70"
+        android:layout_margin="8dp"
+        />
 
 </LinearLayout>
