--- a/app/src/main/res/layout/activity_admin_screen.xml
+++ b/app/src/main/res/layout/activity_admin_screen.xml
@@ -5,44 +5,89 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/cardview_dark_background"
-    android:padding="16dp"
-    android:textColor="@color/white"
+    android:padding="16dp">
 
-    >
+    <!-- Brand Filter -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Brand Filter:"
         android:textSize="20sp"
         android:textColor="@color/white"
-        android:layout_margin="8dp"
-        />
+        android:layout_marginBottom="4dp" />
+
     <Spinner
         android:id="@+id/brandFilterSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
         android:background="@color/material_dynamic_neutral70"
-        android:layout_margin="8dp"
-        />
+        android:layout_marginBottom="16dp" />
 
+    <!-- Cable Filter -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Cable Filter:"
         android:textSize="20sp"
         android:textColor="@color/white"
-        android:layout_margin="8dp"
-        />
+        android:layout_marginBottom="4dp" />
+
     <Spinner
         android:id="@+id/cabelFilterSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
         android:background="@color/material_dynamic_neutral70"
-        android:layout_margin="8dp"
-        />
+        android:layout_marginBottom="16dp" />
 
+    <!-- Date Filter -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Date Filter:"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:layout_marginBottom="4dp" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="16dp">
+
+        <TextView
+            android:id="@+id/selectedDateTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="No Date Selected"
+            android:textColor="@color/white"
+            android:padding="8dp"
+            android:background="@color/material_dynamic_neutral70" />
+
+        <Button
+            android:id="@+id/datePickerButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Date" />
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="16dp">
+            <Button
+                android:id="@+id/resetFiltersButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Reset Filters"
+                android:layout_marginTop="16dp"
+                android:backgroundTint="@color/material_dynamic_neutral70"
+                android:textColor="@color/white" />
+        </LinearLayout>
+
+    <!-- Loans List -->
     <ListView
         android:id="@+id/loanListView"
         android:layout_width="match_parent"
@@ -52,7 +97,6 @@
         android:clipChildren="false"
         android:textColor="@color/white"
         android:background="@color/material_dynamic_neutral70"
-        android:layout_margin="8dp"
-        />
+        android:layout_marginTop="8dp" />
 
 </LinearLayout>
